# 3Dev

./: .gitignore  .gitmodules  3Dev Editor Tutorial.docx  3Dev.h  Animation.cpp  Animation.h  CNAME  Camera.cpp  Camera.h  Light.cpp  Light.h  Model.cpp  Model.h  README.md  Shader.h  Shape.h  build.md  editor.ibs  editor.md  index.md  index.md.backup  library.md  main.cpp  render.md
.github/: FUNDING.yml
3Dev/: 3Dev.h  3DevConfig.cmake  Animation.cpp  Animation.h  Button.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Config.cmake.in  Light.cpp  Light.h  Model.cpp  Model.h  Shader.cpp  Shader.h  build.ibs  fragment.frag  game.cpp  launcher.cpp  launcher_conf.json  libraries.ibs  physics_test.cpp  post.frag  post.vs  skybox.frag  skybox.vs  test.cpp  vertex.vs
3Dev Editor/: AllGui.h  editor.cfg  editor.ibs  game.cpp  libraries.ibs  main.cpp  template.cpp
3Dev-Editor/: 3Dev-Editor.desktop  CMakeLists.txt  main.cpp
3Dev-Editor/gui/: editor.txt  loading.txt  menu.txt
3Dev-Editor/projects/: flappy_bird.json  flappy_bird_scripts.json
3Dev-Editor/scripts/: script.as
3Dev-Render/: CMakeLists.txt  main.cpp
3Dev/include/: 3Dev.h  3Dev.hpp  AngelscriptUtils.hpp  Animation.h  Animation.hpp  Bone.hpp  Button.h  Camera.h  Camera.hpp  Engine.h  Engine.hpp  Framebuffer.h  Framebuffer.hpp  Gui.h  Light.h  Light.hpp  Material.h  Material.hpp  Matrices.h  Matrices.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  Multithreading.hpp  Node.hpp  Physics.h  PhysicsManager.h  PhysicsManager.hpp  Renderer.hpp  SceneManager.h  SceneManager.hpp  ScriptManager.hpp  Shader.h  Shader.hpp  ShadowManager.h  ShadowManager.hpp  Shape.h  Shape.hpp  Skybox.h  (+6 more)
3Dev/resources/animation/: cyborg_000002.mtl
3Dev/resources/models/: teapot.mtl  torus.mtl
3Dev/scenes/: scene.json  scene_scripts.json
3Dev/scripts/: Player.as  test.as
3Dev/shaders/: adapt.fs  bloom.fs  brdf.fs  brdf.vs  decals.fs  decals.vs  deferred.fs  deffered.fs  depth.frag  depth.fs  depth.vs  environment.frag  environment.fs  environment.vs  fog.fs  forward.fs  fragment.frag  fragment.fs  irradiance.frag  irradiance.fs  post.frag  post.fs  post.vs  skybox.frag  skybox.fs  skybox.vs  spcfiltering.frag  spcfiltering.fs  spcfiltering.vs  ssao.fs  ssaoBlur.fs  ssgi.fs  ssr.fs  vertex.vs
3Dev/src/: Animation.cpp  Bone.cpp  Button.cpp  Camera.cpp  Engine.cpp  Framebuffer.cpp  Gui.cpp  Light.cpp  Material.cpp  Matrices.cpp  Mesh.cpp  Model.cpp  Multithreading.cpp  Node.cpp  PhysicsManager.cpp  Renderer.cpp  SceneManager.cpp  ScriptManager.cpp  Shader.cpp  ShadowManager.cpp  Shape.cpp  SoundManager.cpp  TextBox.cpp  TextureManager.cpp
3Dev/textures/: outdoor.hdr
